--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,20 +1,21 @@
 ---
 import { Icon } from 'astro-icon'
 
-const { src = '/astronaut-hero-img.webp' } = Astro.props
+const { src = 'hacker_dark_illlustration.png' } = Astro.props
 ---
 
 <section class="hero my-24">
   <div class="container">
     <div class="grid grid-cols-1 items-center gap-24 lg:grid-cols-2">
+      <img class="hidden lg:block hero" src={src} alt="hacker woman" decoding="async" />
       <div class="flex flex-col items-center gap-8 md:items-start">
         <h1 class="text-center text-6xl md:text-left lg:text-8xl">
-          <slot><span class="text-gradient">Accessible</span> Starter for Astro</slot>
+          <slot><span class="text-gradient">Tara Cloud</span></slot>
         </h1>
         <div class="flex flex-col gap-3 min-[500px]:flex-row">
           <a class="button has-icon" href="https://github.com/markteekman/accessible-astro-starter">
             <Icon pack="ion" name="star-outline" />
-            Star on GitHub
+            GitHub
           </a>
           <a
             class="button has-icon color-secondary"
@@ -25,7 +26,7 @@ const { src = '/astronaut-hero-img.webp' } = Astro.props
           </a>
         </div>
       </div>
-      <img class="hidden lg:block" src={src} alt="" decoding="async" />
+      
     </div>
   </div>
 </section>
@@ -36,6 +37,11 @@ const { src = '/astronaut-hero-img.webp' } = Astro.props
     background-clip: border-box;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+  }
+
+  .hero {
+    border-radius: 50%;
+    box-shadow: 0 0 15px 5px rgba(72, 138, 186, 0.7);
   }
 
   :global(.darkmode .text-gradient) {
