--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,8 +8,8 @@ import logo from "../assets/img/logo.svg"
 <div id="main-navigation" class="is-desktop py-8">
   <div class="container">
     <a href="/" class="flex items-center gap-2 !no-underline">
-      <Image src={logo} alt="Your Logo" width="47" height="37" />
-      <span class="font-bold">Accessible Astro</span>
+      <Image src={logo} alt="Your Logo" width="67" height="57" />
+      <!-- <span class="font-bold"></span> -->
     </a>
     <div class="wrapper">
       <nav class="desktop-menu" aria-label="Main navigation desktop">
@@ -273,17 +273,6 @@ import logo from "../assets/img/logo.svg"
           font-size: 1.125rem;
           line-height: 1.6875rem;
           transition: color 0.15s ease-in-out;
-        }
-
-        a:hover,
-        a:focus,
-        .is-active,
-        .has-dropdown > button:hover,
-        .has-dropdown > button:focus {
-          text-decoration: underline;
-          text-decoration-thickness: 1px;
-          text-decoration-style: wavy;
-          text-underline-offset: 7px;
         }
 
         .is-active {
