--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,16 +5,15 @@ import { Icon } from 'astro-icon'
 ---
 
 <header>
-  <SkipLinks />
   <Navigation>
     <li class="menu-item">
       <a href="/">Home</a>
     </li>
     <li class="menu-item">
-      <a href="/blog/">Blog</a>
+      <a href="/blog/">Musings</a>
     </li>
     <li class="menu-item has-dropdown">
-      <button aria-haspopup="true" aria-expanded="false">Example Pages</button>
+      <button aria-haspopup="true" aria-expanded="false">Projects</button>
       <ul class="dropdown-menu">
         <li class="submenu-item">
           <a href="/mdx-page/">MDX Page</a>
@@ -28,7 +27,7 @@ import { Icon } from 'astro-icon'
       </ul>
     </li>
     <li class="menu-item">
-      <a href="https://accessible-astro.dev" title="external link" rel="external noopener noreferrer">External Link</a>
+      <a href="https://accessible-astro.dev" title="external link" rel="external noopener noreferrer">Gossip Tara</a>
     </li>
     <li class="menu-item type-icon">
       <a href="https://github.com/markteekman/accessible-astro-starter" title="Go to the GitHub page">
