--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,11 +4,11 @@ import { Icon } from 'astro-icon'
 const { src = 'dark_mode_hacker.png' } = Astro.props
 ---
 
-<section class="my-24">
+<section class="relative my-24">
   <div class="container">
-    <div class="grid grid-cols-1 items-center gap-24 lg:grid-cols-2">
-      <img class="hidden lg:block hero" src={src} alt="hacker woman" decoding="async" />
-      <div class="flex flex-col items-center gap-8 md:items-start">
+    <div class="grid grid-cols-1 items-center gap-8">
+      <img class="hidden lg:block hero w-1/2 mx-auto" src={src} alt="hacker woman" decoding="async" />
+      <div class="flex flex-col items-center gap-8">
         <h1 class="text-center text-6xl md:text-left lg:text-8xl">
           <slot><span class="text-gradient">Tara.Cloud</span></slot>
         </h1>
