--- a/src/assets/scss/base/_button.scss
+++ b/src/assets/scss/base/_button.scss
@@ -9,16 +9,16 @@
   text-decoration: none;
   text-align: center;
   color: var(--neutral-900);
-  background-color: var(--primary-100);
-  border: 3px solid var(--primary-100);
+  background-color: var(--primary-200);
+  border: 3px solid var(--primary-200);
   border-radius: 3px;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 
   &:hover,
   &:focus {
     text-decoration: underline;
-    background-color: var(--primary-200);
-    border-color: var(--primary-200);
+    background-color: var(--primary-300);
+    border-color: var(--primary-300);
   }
 
   &:visited {
@@ -26,13 +26,28 @@
   }
 
   &.color-secondary {
-    background-color: var(--secondary-100);
-    border-color: (var(--secondary-100));
+    background-color: var(--secondary-200);
+    border-color: (var(--secondary-200));
 
     &:hover,
     &:focus {
       background-color: var(--secondary-400);
       border-color: var(--secondary-400);
+    }
+  }
+
+  &.color-accent {
+    background-color: var(--pink-accent-200);
+    border-color: (var(--pink-accent-200));
+    // background-color: var(--secondary-500);
+    // border-color: (var(--secondary-500));
+
+    &:hover,
+    &:focus {
+      background-color: var(--pink-accent-300);
+      border-color: (var(--pink-accent-300));
+      // background-color: var(--accent-100);
+      // border-color: var(--neutral-400);
     }
   }
 
