--- a/src/assets/scss/base/_color.scss
+++ b/src/assets/scss/base/_color.scss
@@ -4,11 +4,16 @@
 
 $colors: (
   primary: (
-    100: hsl(276, 100%, 79%),
-    200: hsl(276, 79%, 69%),
-    300: hsl(276, 53%, 49%),
-    400: hsl(276, 64%, 48%),
-    500: hsl(276, 96%, 20%),
+    // 100: hsl(276, 100%, 79%),
+    // 200: hsl(276, 79%, 69%),
+    // 300: hsl(276, 53%, 49%),
+    // 400: hsl(276, 64%, 48%),
+    // 500: hsl(276, 96%, 20%),
+    100: hsl(244, 100%, 87%),
+    200: hsl(244, 95%, 77%),
+    300: hsl(244, 90%, 67%),
+    400: hsl(244, 85%, 57%),  
+    500: hsl(244, 80%, 47%)
   ),
   secondary: (
     100: hsl(200, 80%, 85%),
@@ -31,4 +36,26 @@ $colors: (
   dark: (
     100: hsl(240, 95%, 8%),
   ),
+  pink-accent: (
+    // 100: hsl(343, 40%, 66%),
+    // 200: hsl(343, 40%, 56%),
+    // 300: hsl(343, 40%, 46%),
+    // 400: hsl(343, 40%, 36%),
+    // 500: hsl(343, 40%, 26%),
+    // 100: hsl(350, 100%, 87%),
+    // 200: hsl(350, 95%, 77%),
+    // 300: hsl(350, 90%, 67%),
+    // 400: hsl(350, 85%, 57%),
+    // 500: hsl(350, 80%, 47%)
+    // 100: hsl(330, 65%, 74%),
+    // 200: hsl(330, 64%, 64%),
+    // 300: hsl(330, 62%, 59%),
+    // 400: hsl(330, 60%, 54%),  // #d33a82
+    // 500: hsl(330, 58%, 44%)
+    100: hsl(330, 70%, 74%),
+    200: hsl(330, 65%, 64%),
+    300: hsl(330, 60%, 54%),  // #d33a82
+    400: hsl(330, 55%, 44%),
+    500: hsl(330, 50%, 34%)
+  )
 );
