--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,28 +1,37 @@
 ---
 import { Icon } from 'astro-icon'
 
-const { src = 'dark_mode_hacker.png' } = Astro.props
+const { src = 'light_mode_hacker.jpeg' } = Astro.props
 ---
-
-<section class="relative my-24">
+<section class="relative my-12">
   <div class="container">
     <div class="grid grid-cols-1 items-center gap-8">
-      <img class="hidden lg:block hero w-1/2 mx-auto" src={src} alt="hacker woman" decoding="async" />
+      <!-- <img id="hero-image" class="hidden lg:block hero w-1/2 mx-auto" src={src} alt="hacker woman" decoding="async" /> -->
+      <div class="img-toggle w-1/2 mx-auto"></div>
+      <div class="test-div"></div>"
       <div class="flex flex-col items-center gap-8">
         <h1 class="text-center text-6xl md:text-left lg:text-8xl">
-          <slot><span class="text-gradient">Tara.Cloud</span></slot>
+          <slot><span class="text-gradient">TARA CLOUD</span></slot>
         </h1>
         <div class="flex flex-col gap-3 min-[500px]:flex-row">
           <a class="button has-icon" href="https://github.com/markteekman/accessible-astro-starter">
-            <Icon pack="ion" name="star-outline" />
+            <Icon pack="ion" name="logo-github" />
             GitHub
           </a>
           <a
             class="button has-icon color-secondary"
-            href="https://github.com/markteekman/accessible-astro-starter/blob/main/README.md"
+            href="https://www.linkedin.com/in/taraschoenherr/"
           >
-            <Icon pack="ion" name="bookmark-outline" />
-            Read the Docs
+            <Icon pack="ion" name="logo-linkedin" />
+            LinkedIn
+          </a>
+          <a
+            class="button has-icon color-accent"
+
+            href="https://www.linkedin.com/in/taraschoenherr/"
+          >
+            <Icon pack="ion" name="logo-instagram" />
+            Insta
           </a>
         </div>
       </div>
@@ -33,7 +42,8 @@ const { src = 'dark_mode_hacker.png' } = Astro.props
 
 <style lang="scss">
   .text-gradient {
-    background: linear-gradient(315deg, var(--primary-200) 25%, var(--secondary-500));
+    // background: linear-gradient(315deg, var(--primary-200) 25%, var(--secondary-500));
+    background: linear-gradient(315deg, var(--pink-accent-200) 25%, var(--primary-400));
     background-clip: border-box;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -43,10 +53,32 @@ const { src = 'dark_mode_hacker.png' } = Astro.props
     border-radius: 15%;
   }
 
+  .img-toggle{
+    width: 100%;
+    max-width: 100%;
+    padding-top: 74.07%;
+    display: block;
+    margin: 0 auto;
+    position: relative;
+    background: url(light_mode_hacker.png) center/cover no-repeat;
+    background-size: cover;
+  }
+
+  :global(.darkmode) .img-toggle {
+    background: url(dark_mode_hacker.png) center/cover no-repeat;
+  }
+
+  .test-div{
+    width: 100%;
+    max-width: 400px;
+    min-width: 400px;
+  }
+
   :global(.darkmode .text-gradient) {
-    background: linear-gradient(315deg, var(--primary-200) 25%, var(--secondary-400));
+    background: linear-gradient(315deg, var(--pink-accent-200) 25%, var(--primary-400));
     background-clip: border-box;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
 </style>
+
