add bolt and emoji

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,19 +10,22 @@ import { Icon } from 'astro-icon'
       <a href="/">Home</a>
     </li>
     <li class="menu-item">
+      <a href="/blog/">About</a>
+    </li>
+    <li class="menu-item">
       <a href="/blog/">Musings</a>
     </li>
     <li class="menu-item has-dropdown">
       <button aria-haspopup="true" aria-expanded="false">Projects</button>
       <ul class="dropdown-menu">
         <li class="submenu-item">
-          <a href="/mdx-page/">MDX Page</a>
+          <a href="/mdx-page/">AWS</a>
         </li>
         <li class="submenu-item">
-          <a href="/markdown-page/">Markdown Page</a>
+          <a href="/markdown-page/">Azure</a>
         </li>
         <li class="submenu-item">
-          <a href="/accessible-components">Accessible Components</a>
+          <a href="/accessible-components">Google Cloud</a>
         </li>
       </ul>
     </li>
