--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,14 +2,14 @@
 import ResponsiveToggle from './ResponsiveToggle.astro'
 import { DarkMode } from 'accessible-astro-components'
 import { Image } from "astro:assets"
-import logo from "../assets/img/logo.svg"
+import { Icon } from 'astro-icon'
 ---
 
 <div id="main-navigation" class="is-desktop py-8">
   <div class="container">
     <a href="/" class="flex items-center gap-2 !no-underline">
-      <Image src={logo} alt="Your Logo" width="67" height="57" />
-      <!-- <span class="font-bold"></span> -->
+      <Icon pack="ion" name="flash-outline" size="40" />
+      <span class="font-bold"></span>
     </a>
     <div class="wrapper">
       <nav class="desktop-menu" aria-label="Main navigation desktop">
