--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -6,11 +6,11 @@ import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 
 const {
-  title = 'Astro',
-  description = 'A starter project with accessibility features using Astro static site builder. Contains accessible landmarks, skip links, a dark mode color scheme, better focus outline and keyboard menu navigation.',
+  title = 'Tara Cloud',
+  description = 'Taras adventures in the cloud.',
   url,
-  image = '/social-preview-image.png',
-  author = 'Mark Teekman',
+  image = '/night_mode_hacker.png',
+  author = 'Tara',
 } = Astro.props
 ---
 
@@ -21,7 +21,7 @@ const {
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%22100%22>🌩️</text></svg>">
 
     <SiteMeta
       title={title}
@@ -52,7 +52,7 @@ const {
         --font-color: var(--neutral-900);
         --action-color: var(--primary-300);
         --action-color-state: var(--primary-500);
-        --background: var(--neutral-100);
+        --background: var(--neutral-300);
         --primary-background: var(--primary-100);
         --neutral-background: var(--neutral-200);
       }
